Consolidate some controller logic into a parent class